appId: com.example.nudgetest_demoqa1
app: /Users/mayukhdutta/Desktop/Maestro/app-release.apk

---

  - launchApp: com.example.nudgetest_demoqa1
  - tapOn:
     text: "Track Story"
  - tapOn:
     text: "User Identifier"
  - tapOn: 
     text: "Track Quiz"  
  # ----------- STARTING OF THE QUIZ ------------
  - tapOn:
     text: "START QUIZ"
  - tapOn: 
     text: "c) Paris"
  - tapOn: 
     text: "b) Oxygen"
  - tapOn: 
     text: "c) William Shakespeare"
  - tapOn:
     text: "c) Jupiter"   
  - tapOn:
     text: "b) 1912" 
  - tapOn:
     text: "c) 2"
  - tapOn:
     text: "c) Leonardo Da Vinci"
  - tapOn:
     text: "b) Avocado"
  - tapOn:
     text: "b) Japan"
  - tapOn:
     text: "a) 0"
  # ----------- FINISHING OF THE QUIZ ------------
  # ----------- REWARDS SECTION ------------
  - tapOn:
     text: "MY REWARDS"
  - tapOn:
     point: "27%,41%"
  # ----------- SWIPPING TO UNLOCK COUPON ------------
  - swipe:
     start: "21%,41%"
     end: "76%,41%"
     duration: 1767
  - swipe:
     start: "76%,38%"
     end: "64%,38%"
     duration: 817
  - swipe:
     start: "76%,38%"
     end: "22%,38%"
     duration: 2434
  - swipe:
     start: "76%,60%"
     end: "20%,60%"
     duration: 1100
  - swipe:
     start: "20%,57%"
     end: "27%,56%"
     duration: 883
  - swipe:
     start: "31%,56%"
     end: "76%,56%"
     duration: 1617
  - swipe:
     start: "27%,57%"
     end: "33%,57%"
     duration: 849
  - swipe:
     start: "77%,59%"
     end: "33%,57%"
     duration: 1150
  - swipe:
     start: "81%,61%"
     end: "24%,62%"
     duration: 1017
  - swipe:
     start: "76%,43%"
     end: "22%,45%"
     duration: 967
  - swipe:
     start: "21%,48%"
     end: "74%,48%"
     duration: 1000
  - tapOn:
     point: "55%,80%"
  - tapOn: 
     text: "BACK TO HOME"
  # ----------- VIEWING RESPONSES OF THE QUIZ ------------
  - tapOn: 
     text: "Track Quiz"
  - tapOn: 
     text: "VIEW RESPONSES"
  - tapOn:
     point: "93%,8%"
  - tapOn:
     point: "94%,7%"
  - tapOn:
     point: "94%,7%"
  - tapOn:
     point: "94%,7%"
  - tapOn:
     point: "94%,7%"
  - tapOn:
     point: "94%,7%"
  - tapOn:
     point: "94%,7%"
  - tapOn:
     point: "94%,7%"
  - tapOn:
     point: "94%,7%"
  - tapOn:
     point: "94%,7%"
  - tapOn: 
     text: "MY REWARDS"
  - tapOn: 
     text: "BACK TO HOME"

  
  

  